--- a/Views/DangKyXetTuyenKhac/DanhGia.cshtml
+++ b/Views/DangKyXetTuyenKhac/DanhGia.cshtml
@@ -23,12 +23,11 @@
         <div class="page-header-content">
             <div class="row align-items-center justify-content-between pt-3">
                 <div class="col-auto mb-1">
-                    <h1 class="page-header-title  mb-2">
+                    <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        Theo phương thức sử dụng kết quả thi đánh giá năng lực/đánh giá tư duy
-                    </h1>
+                        <span>Theo phương thức sử dụng kết quả thi đánh giá năng lực/đánh giá tư duy</span>                       
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
