--- a/Views/DangKyXetTuyenKhac/Ielts.cshtml
+++ b/Views/DangKyXetTuyenKhac/Ielts.cshtml
@@ -8,13 +8,16 @@
     label {
         white-space: nowrap !important;
     }
+
     .span_with_for {
         width: 65px !important
     }
+
     .table-container {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
+
     #loadingModal {
         background-color: rgba(0, 0, 0, 0.5);
         background-color: transparent;
@@ -25,10 +28,10 @@
         <div class="page-header-content">
             <div class="row align-items-center justify-content-between pt-3">
                 <div class="col-auto mb-1">
-                    <h1 class="page-header-title  mb-2">
+                    <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        Theo phương thức sử dụng chứng chỉ ngoại ngữ
-                    </h1>
+                        <span> Theo phương thức sử dụng chứng chỉ ngoại ngữ</span>
+                    </div>
                 </div>
 
             </div>
@@ -86,7 +89,6 @@
                         <p style="color:red; font-style:italic" class="mb-1">Lưu ý: </p>
                         <p style="color:red; font-style:italic" class="mb-1">- Thí sinh cần nộp lệ phí xét tuyển và gửi minh chứng (ảnh chụp giao dịch chuyển tiền).</p>
                         <p style="color:red; font-style:italic" class="mb-1">- Thí sinh in phiếu tổng hợp nguyện vọng đăng ký, kiểm tra lại thông tin trong phiếu, ký xác nhận và gửi về trường theo đường bưu điện.</p>
-
                     </div>
                 </div>
             </div>
