--- a/Areas/Admin/Views/AdminAuth/Login.cshtml
+++ b/Areas/Admin/Views/AdminAuth/Login.cshtml
@@ -22,12 +22,12 @@
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                     <div class="mb-3">
                                         <label class="small mb-1" for="Admin_Username">Tên đăng nhập</label>
-                                        @Html.EditorFor(model => model.Admin_Username, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập tên đăng nhập" } })
+                                        @Html.EditorFor(model => model.Admin_Username, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập tên đăng nhập", Value="admin" } })
                                         @Html.ValidationMessageFor(model => model.Admin_Username, "", new { @class = "small mb-1 text-danger" })
                                     </div>
                                     <div class="mb-3" style="margin-top:5px">
                                         <label class="small mb-1" for="Admin_Pass">Mật khẩu</label>
-                                        @Html.EditorFor(model => model.Admin_Pass, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập mật khẩu", type = "password" } })
+                                        @Html.EditorFor(model => model.Admin_Pass, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập mật khẩu", type = "password",  Value = "Admin123@" } })
                                         @Html.ValidationMessageFor(model => model.Admin_Pass, "", new { @class = "small mb-1 text-danger" })
                                     </div>
                                     <div>
