--- a/Views/DangKyXetTuyens/dkxtthptqg.cshtml
+++ b/Views/DangKyXetTuyens/dkxtthptqg.cshtml
@@ -25,7 +25,7 @@
                 <div class="col-auto mb-1">
                     <div class="page-header-title mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        <span>Sử dụng kết quả thi tốt nghiệp THPT Quốc gia</span>
+                        <span id="sp_tieude">Sử dụng kết quả thi tốt nghiệp THPT Quốc gia</span>
                     </div>
                 </div>
 
@@ -33,6 +33,27 @@
         </div>
     </div>
 </header>
+<script>
+    $(document).ready(function () {
+        let sp_tieude = document.getElementById('sp_tieude');    
+        if (window.innerWidth <= 1200) {
+            sp_tieude.innerText = "Sử dụng KQ thi TN THPT Quốc gia";
+        }
+        else {
+            sp_tieude.innerText = "Sử dụng kết quả thi tốt nghiệp THPT Quốc gia";
+        }
+
+        function reportWindowSize() {
+            if (window.innerWidth <= 1200) {
+                sp_tieude.innerText = "Sử dụng KQ thi TN THPT Quốc gia";
+            }
+            else {
+                sp_tieude.innerText = "Sử dụng kết quả thi tốt nghiệp THPT Quốc gia";
+            }
+        }
+        window.onresize = reportWindowSize;
+    })
+</script>
 <div class="container-fluid px-12">
     <div id="div_list_aspirations">
         <div class="card card-header-actions">
@@ -42,33 +63,71 @@
             <input type="hidden" id="dkxt_thptqg_id_checkin" style="display:none!important" />
             <div class="card-body">
                 <div class="row">
-                    <div class="col-xxl-12">
-                        <table class="table table-hover">
-                            <thead>
-                                <tr>
-                                    <th style="vertical-align:middle;">Nguyện vọng</th>
-                                    <th style="vertical-align:middle;">Ngành</th>
-                                    <th style="vertical-align:middle;">Tổ hợp môn</th>
-                                    @*<th style="vertical-align:middle;">Trạng thái</th>*@
-                                    <th style="vertical-align:middle;">Tổng điểm</th>
-                                    <th style="vertical-align:middle; text-align:center; ">Cập nhật</th>
-                                </tr>
-                            </thead>
-                            <tbody id="tbody_list_nguyenvong_xtkqthpt">
-                            </tbody>
-                        </table>
+                    <div class="col-sm-12 col-12">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th style="vertical-align:middle;">Nguyện vọng</th>
+                                        <th style="vertical-align:middle;">Ngành</th>
+                                        <th style="vertical-align:middle;">Tổ hợp môn</th>
+                                        @*<th style="vertical-align:middle;">Trạng thái</th>*@
+                                        <th style="vertical-align:middle;">Tổng điểm</th>
+                                        <th style="vertical-align:middle; text-align:center; ">Cập nhật</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tbody_list_nguyenvong_xtkqthpt">
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xxl-12">
+                    <div class="col-sm-12">
                         <center>
                             <button id="bt_xuat_phieu_tong_hop_kq" class="btn btn-outline-success">Xuất phiếu tổng hợp</button>
                             <a class="btn btn-outline-primary" id="bt_add_aspirations">Thêm nguyện vọng</a>
+                            <script>
+                                $(document).ready(function () {
+                                    let sp_tieude = document.getElementById('sp_tieude');
+                                    let bt_xuat_phieu_tong_hop = document.getElementById('bt_xuat_phieu_tong_hop_kq');
+                                    let bt_them_nguyen_vong = document.getElementById('bt_them_nguyen_vong');
+
+                                    if (window.innerWidth <= 700) {
+                                        sp_tieude.innerHTML = "Sử dụng KQ thi TN THPT Quốc gia";
+                                        bt_xuat_phieu_tong_hop.innerHTML = "Xuất phiếu";
+                                        bt_them_nguyen_vong.innerHTML = "Thêm NV";
+
+                                    }
+                                    else {
+                                        sp_tieude.innerHTML = "Sử dụng kết quả thi tốt nghiệp THPT Quốc gia";
+                                        bt_xuat_phieu_tong_hop.innerHTML = "Xuất phiếu tổng hợp";
+                                        bt_them_nguyen_vong.innerHTML = "Thêm nguyện vọng";
+
+                                    }
+
+                                    function reportWindowSize() {
+                                        if (window.innerWidth <= 700) {
+                                            sp_tieude.innerHTML = "Sử dụng KQ thi TN THPT Quốc gia";
+                                            bt_xuat_phieu_tong_hop.innerHTML = "Xuất phiếu";
+                                            bt_them_nguyen_vong.innerHTML = "Thêm NV";
+
+                                        }
+                                        else {
+                                            sp_tieude.innerHTML = "Sử dụng kết quả thi tốt nghiệp THPT Quốc gia";
+                                            bt_xuat_phieu_tong_hop.innerHTML = "Xuất phiếu tổng hợp";
+                                            bt_them_nguyen_vong.innerHTML = "Thêm nguyện vọng";
+
+                                        }
+                                    }
+                                    window.onresize = reportWindowSize;
+                                })
+                            </script>
                         </center>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xxl-12">
+                    <div class="col-sm-12">
                         <p style="color:red; font-style:italic" class="mb-1">Lưu ý: </p>
                         <p style="color:red; font-style:italic; text-align:justify" class="mb-1">-Thí sinh cần nộp lệ phí xét tuyển và gửi minh chứng trong phần thông tin lệ phí (ảnh chụp giao dịch chuyển tiền).</p>
                         <p style="color: red; font-style: italic ;text-align:justify" class="mb-1">- Thí sinh in phiếu tổng hợp nguyện vọng đăng ký của phương thức này, kiểm tra lại thông tin trong phiếu, ký xác nhận và gửi về trường theo đường bưu điện.</p>
